css/agency.css
/* ... */
.portfolio-modal .modal-backdrop {
    opacity: 0;
    display: none;
}

img::selection {
    background: transparent;
}

img::-moz-selection {
    background: transparent;
}


/********************************************/


/**255,243,203--20,24,25**/

.page-scroll {
    padding: 0;
}

#navbar-link {
    padding-top: 5px;
    padding-bottom: 0;
    line-height: 40px;
    /* Must be same as #logo {max-height} */
}

#logo {
    max-height: 40px;
    max-width: 40px;
    padding: 5px;
    margin-left: 10px;
}

@media (min-width: 768px) {
    #logo {
        padding: 0;
        margin-left: inherit;
    }
}

.hexagon-primary {
    background-color: #58a6ea;
    margin-bottom: 16px;
}

.hexagon-primary:before {
    border-bottom-color: #58a6ea;
}

.hexagon-primary:after {
    border-top-color: #58a6ea;
    position: absolute;
}

.hexagon-primary.hexagon-hover:hover {
    background-color: #4c90cb;
}

.hexagon-primary.hexagon-hover:hover:before {
    border-bottom-color: #4c90cb;
}

.hexagon-primary.hexagon-hover:hover:after {
    border-top-color: #4c90cb;
}

.hexagon-primary > * {
    position: relative;
    z-index: 1;
    margin-top: -12px;
}

.hexagon-button:hover {
    color: transparent;
}

.hexagon-inner {
    background-color: white;
    -webkit-transform: scale(.9, .9);
    -moz-transform: scale(.9, .9);
    transform: scale(.9, .9);
}

.hexagon-inner:before {
    border-bottom-color: white;
    transform: scaleY(1.02);
}

.hexagon-inner:after {
    border-top-color: white;
    position: absolute;
    transform: scaleY(1.02);
}

.hexagon-inner > * {
    position: relative;
    z-index: 1;
    margin-top: -12px;
}

.nav-icon {
    color: #58a6ea;
}

#grid {
    position: relative;
    padding: 0;
    border-right: 1px solid lightgray;
    border-bottom: 1px solid lightgray;
}

#grid-area {
    position: relative;
    z-index: -1;
}

#grid-area-overlay {
    width: 100%;
    position: absolute;
    z-index: -1;
    background-color: black;
    opacity: 0.8;
    float: left;
}

.grid-box {
    background-color: white;
    border-top: 1px solid lightgray;
    border-left: 1px solid lightgray;
    width: 10px;
    height: 10px;
    position: absolute;
}


/*TODO*/

#profile-img {
    width: 150px;
    height: 150px;
    margin-top: 30px;
    margin-bottom: 60px;
    border-radius: 15px;
}

@media (min-width: 768px) {
    #profile-img {
        width: 300px;
        height: 300px;
    }
}

#resume-link {
    margin-top: 50px;
    text-align: center;
    font-size: 12pt;
    /*    font-weight: bold;*/
}

#resume-link div {
    display: inline-block;
    padding: 15px 10px 15px 10px;
    /*    border: 1px solid #4c90cb;*/
    border: 2px solid black;
    border-radius: 100%;
}

#resume-link a {
    color: black;
}

#resume-link div:hover {
    /*
    color: #4c90cb;
    border-color: #4c90cb;
*/
    color: #179ff4;
    border-color: #179ff4;
    background-color: #fafafa;
    font-weight: bold;
    /*    text-decoration: underline;*/
    color: white;
    background-color: #4c90cb;
    border-color: #4c90cb;
}

.gallery-section {
    overflow: hidden;
    height: 0;
    width: 100%;
    /*    box-shadow: inset 0px 7px 20px rgba(0, 0, 0, 0.9), inset 0px -7px 20px rgba(0, 0, 0, 0.2);*/
    background-color: white;
    text-align: justify;
    position: relative;
    /* For the shadow (below) */
}

.gallery-section-dark {
    background-color: #1a1a1a;
}

.gallery-section-title {
    margin-top: 40px;
    margin-bottom: 40px;
}

.gallery-section .section-heading {
    margin-top: 15px;
    text-align: left;
}

.gallery-section-dark .section-heading {
    margin-top: 50px;
}

.gallery-section-dark,
.gallery-section-dark .section-heading {
    text-align: center;
}

.gallery-section:before {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    box-shadow: inset 0px 7px 20px rgba(0, 0, 0, 0.2), inset 0px -7px 20px rgba(0, 0, 0, 0.2);
    pointer-events: none;
    /* Disable clicking */
}

.gallery-main-image {
    margin-right: auto;
    margin-left: auto;
    width: auto;
    height: auto;
}

.project-images {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.gallery-image-display {
    width: 159px;
    height: 159px;
    margin-top: 8px;
    margin-left: 4px;
    margin-right: 4px;
}

video {
    display: block;
    /* Removing the extra margin added to the bottom */
}

.painting-gallery-image {
    margin-top: 40px;
}

@media (min-width: 768px) {
    .gallery-main-image {
        margin: 0;
        width: 500px;
        height: 500px;
        /* ^^^^ TODO: Remove and leave as auto (for landscape imgs?) */
    }
    .painting-gallery-image {
        height: auto;
        width: 80%;
        margin-left: auto;
        margin-right: auto;
        margin-top: 100px;
    }
    .painting-gallery-image-steps {
        margin-top: 10px;
    }
    .project-images {
        display: inline;
        float: left;
        margin-right: 20px;
    }
    .gallery-section-dark .project-images {
        margin-right: 0;
    }
    .gallery-image-display {
        margin: 0;
        margin-right: 8px;
        margin-top: 8px;
    }
}


/* Prevent images from being stretched if the screen is too large */

@media (min-width: 3000px) {
    .painting-gallery-image {
        width: 3000px;
    }
}

.painting-gallery-image-steps {
    margin-top: 10px;
}

.painting-gallery-end {
    margin-top: 50px;
}

.gallery-project-details {
    padding-left: 30px;
    padding-right: 30px;
}

.gallery-project {
    margin-bottom: 20px;
}

.gallery-button {
    cursor: pointer;
    /* Cover all browser cases */
    cursor: hand;
}

.gallery-thumbnail {
    margin-top: 15px;
    width: 80px;
    height: 80px;
}

@media (min-width: 768px) {
    .gallery-thumbnail {
        width: 128px;
        height: 128px;
    }
}

section#projects {
    padding-bottom: 40px;
    padding-top: 70px;
}

.subsection {
    margin-top: 50px;
}
/* ... */

